Updated Content of Static Website

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -7,7 +7,7 @@
   /* You can override the default Infima variables here. */
   :root {
     --ifm-color-primary: #a38901;
-    --ifm-color-primary-dark: #29784c;
+    --ifm-color-primary-dark: #beab48;
     --ifm-color-primary-darker: #277148;
     --ifm-color-primary-darkest: #205d3b;
     --ifm-color-primary-light: #33925d;
